--- a/overlay/packages/apps/CMParts/res/values-ru/strings.xml
+++ b/overlay/packages/apps/CMParts/res/values-ru/strings.xml
@@ -496,7 +496,8 @@
     <!-- Display : Rotation  -->
     <string name="accelerometer_title">Автоповорот экрана</string>
     <string name="display_rotation_title">Поворот экрана</string>
-    <string name="display_rotation_disabled">Выключен</string>
+    <string name="display_rotation_enabled">Включено</string>
+    <string name="display_rotation_disabled">Выключено</string>
     <string name="display_rotation_unit">градусов</string>
     <string name="display_lockscreen_rotation_title">Поворот экрана блокировки</string>
     <string name="display_rotation_category_title">Режимы вращения</string>
