--- a/overlay/packages/apps/DeskClock/res/values-ru/strings.xml
+++ b/overlay/packages/apps/DeskClock/res/values-ru/strings.xml
@@ -47,5 +47,10 @@
     <!-- Select the alarm from external device -->
     <string name="alarm_select_external">Музыка</string>
 
+    <!-- Summary texts for shake and flip actions -->
+    <string name="action_summary_snooze">отложить сигнал будильника</string>
+    <string name="action_summary_dismiss">отключить будильник</string>
+    <string name="action_summary_do_nothing">ничего не делать</string>
+
 </resources>
 
