--- a/overlay/packages/apps/CMParts/res/values-uk/strings.xml
+++ b/overlay/packages/apps/CMParts/res/values-uk/strings.xml
@@ -178,6 +178,7 @@
     <string name="hardware_keys_action_launch_camera">Запуск камери</string>
     <string name="hardware_keys_action_sleep">Вимкнути екран</string>
     <string name="hardware_keys_action_last_app">Остання програма</string>
+    <string name="hardware_keys_action_split_screen">Розділений екран</string>
     <string name="camera_sleep_on_release_title">Тимчасове прокидання</string>
     <string name="camera_sleep_on_release_summary">Наполовину натиснута кнопка буде тримати екран увімкненим</string>
     <string name="camera_launch_title">Запуск камери</string>
