--- a/doze/res/values-uk/strings.xml
+++ b/doze/res/values-uk/strings.xml
@@ -13,22 +13,33 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-  <string name="ambient_display_title">Індикація подій</string>
-  <string name="ambient_display_summary">Вмикати екран при отриманні повідомлень</string>
-  <string name="always_enabled_title">Завжди увімкнено</string>
-  <string name="always_enabled_summary">Прослуховувати події сенсора відразу після відключення екрану</string>
-  <!-- Tilt sensor -->
-  <string name="tilt_sensor_title">Датчик нахилу</string>
-  <string name="pick_up_title">Підняти</string>
-  <string name="pick_up_summary">Показувати сповіщення при піднятті пристрою</string>
-  <!-- Proximity sensor -->
-  <string name="priximity_sensor_title">Датчик наближення</string>
-  <string name="hand_wave_gesture_title">Помах</string>
-  <string name="hand_wave_gesture_summary">Проведіть долонею над екраном для перегляду повідомлень</string>
-  <string name="pocket_gesture_title">Кишеня</string>
-  <string name="pocket_gesture_summary">Показувати сповіщення при вийманні пристрою з кишені</string>
-  <!-- Help text -->
-  <string name="dlg_ok">OK</string>
-  <string name="doze_settings_help_title">Інформація</string>
-  <string name="doze_settings_help_text">Ці функції використовують події датчиків для відображення повідомлень. Датчик перевіряється тільки при надходженні нового повідомлення, що допомагає заощадити заряд батареї. Можна активувати увімкнення датчика відразу при вимкненні екрану пристрою, однак це може прискорити розряд батареї.</string>
+    <!-- Label for feature switch [CHAR LIMIT=30] -->
+    <string name="switch_bar_on">Увімкнуто</string>
+
+    <!-- Label for feature switch [CHAR LIMIT=30] -->
+    <string name="switch_bar_off">Вимкнуто</string>
+    
+    <string name="ambient_display_title">Індикація подій</string>
+    <string name="ambient_display_summary">Вмикати екран при отриманні повідомлень</string>
+    <string name="ambient_display_summary_on">Екран буде вмикатися при отриманні повідомлення</string>
+    <string name="ambient_display_summary_off">Екран не буде вмикатися при отриманні повідомлення</string>
+    <string name="always_enabled_title">Завжди увімкнено</string>
+    <string name="always_enabled_summary">Прослуховувати події сенсора відразу після відключення екрану</string>
+
+    <!-- Tilt sensor -->
+    <string name="tilt_sensor_title">Датчик нахилу</string>
+    <string name="pick_up_title">Підняти</string>
+    <string name="pick_up_summary">Показувати сповіщення при піднятті пристрою</string>
+
+    <!-- Proximity sensor -->
+    <string name="priximity_sensor_title">Датчик наближення</string>
+    <string name="hand_wave_gesture_title">Помах</string>
+    <string name="hand_wave_gesture_summary">Проведіть долонею над екраном для перегляду повідомлень</string>
+    <string name="pocket_gesture_title">Кишеня</string>
+    <string name="pocket_gesture_summary">Показувати сповіщення при вийманні пристрою з кишені</string>
+
+    <!-- Help text -->
+    <string name="dlg_ok">OK</string>
+    <string name="doze_settings_help_title">Інформація</string>
+    <string name="doze_settings_help_text">Ці функції використовують події датчиків для відображення повідомлень. Датчик перевіряється тільки при надходженні нового повідомлення, що допомагає заощадити заряд батареї. Можна активувати увімкнення датчика відразу при вимкненні екрану пристрою, однак це може прискорити розряд батареї.</string>
 </resources>
