--- a/overlay/packages/apps/Contacts/res/values-ru/strings.xml
+++ b/overlay/packages/apps/Contacts/res/values-ru/strings.xml
@@ -25,7 +25,7 @@
     <string name="no_duplicated_contacts">"Нет дублирующихся контактов"</string>
     <string name="give_up_merging">"Отказаться от объединения?"</string>
     <string name="give_up">"Отказаться"</string>
-    <string name="cancel">"отмена"</string>
+    <string name="cancel">"Отмена"</string>
     <string name="merge_complete">"Объединение завершено."</string>
     <string name="sim_email_full">"Память SIM-карты для адресов электронной почты заполнена."</string>
     <string name="sim_anr_full">"Память SIM-карты для телефонных номеров заполнена."</string>
