--- a/overlay/packages/apps/Settings/res/values-uk/strings.xml
+++ b/overlay/packages/apps/Settings/res/values-uk/strings.xml
@@ -20,4 +20,6 @@
 
     <string name="profiles_settings_title">Системні профілі</string>
 
+    <string name="storage_settings">Сховище</string>
+
 </resources>
