--- a/overlay/packages/apps/Dialer/res/values-ru/strings.xml
+++ b/overlay/packages/apps/Dialer/res/values-ru/strings.xml
@@ -37,4 +37,6 @@
 
     <string name="no">Нет</string>
 
+    <string name="calllog_search_hint">"Искать в журнале вызовов"</string>
+
 </resources>
