--- a/doze/res/values-es/strings.xml
+++ b/doze/res/values-es/strings.xml
@@ -13,7 +13,31 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-  <!-- Tilt sensor -->
-  <!-- Proximity sensor -->
-  <!-- Help text -->
+<!-- Label for feature switch [CHAR LIMIT=30] -->
+    <string name="switch_bar_on">Activado</string>
+
+    <!-- Label for feature switch [CHAR LIMIT=30] -->
+    <string name="switch_bar_off">Desactivado</string>
+
+    <string name="ambient_display_title">Pantalla ambiente</string>
+    <string name="ambient_display_summary">Despierta el dispositivo al recibir notificaciones</string>
+    <string name="ambient_display_summary_on">La pantalla se encenderá al recibir notificaciones</string>
+    <string name="ambient_display_summary_off">La pantalla no se encenderá al recibir notificaciones</string>
+
+    <!-- Tilt sensor -->
+    <string name="tilt_sensor_title">Sensor de movimiento</string>
+    <string name="pick_up_title">Al coger dispositivo</string>
+    <string name="pick_up_summary">Muestra las notificaciones al coger el dispositivo</string>
+
+    <!-- Proximity sensor -->
+    <string name="priximity_sensor_title">Sensor de proximidad</string>
+    <string name="hand_wave_gesture_title">Al mover en la mano</string>
+    <string name="hand_wave_gesture_summary">Muestra las notificaciones al mover el dispositivo en la mano</string>
+    <string name="pocket_gesture_title">Bolsillo</string>
+    <string name="pocket_gesture_summary">Muestra las notificaciones al sacar el dispositivo del bolsillo</string>
+
+    <!-- Help text -->
+    <string name="dlg_ok">OK</string>
+    <string name="doze_settings_help_title">Ayuda</string>
+    <string name="doze_settings_help_text">Estas características usan los eventos de los sensores para lanzar una notificación doze. Produce mayor consumo de batería.</string>
 </resources>
